# Security-Oriented-Cooperative-Tracking-Control-of-Networked-Euler--Lagrange-Systems

./: README.md
code_demo_ws/install/: local_setup.fish  local_setup.sh  setup.fish  setup.sh
code_demo_ws/install/lib/dynamic_encryption_based_pp_cooperative_control/: dynamic_encryption_based_pp_cooperative_control_observer_tracking1  dynamic_encryption_based_pp_cooperative_control_observer_tracking2  dynamic_encryption_based_pp_cooperative_control_observer_tracking3  dynamic_encryption_based_pp_cooperative_control_observer_tracking4  dynamic_encryption_based_pp_cooperative_control_visual
code_demo_ws/install/lib/pkgconfig/: dynamic_encryption_based_pp_cooperative_control.pc  two_link_arm_gazebo.pc
code_demo_ws/install/share/dynamic_encryption_based_pp_cooperative_control/: package.xml
code_demo_ws/install/share/dynamic_encryption_based_pp_cooperative_control/cmake/: dynamic_encryption_based_pp_cooperative_controlConfig.cmake
code_demo_ws/install/share/dynamic_encryption_based_pp_cooperative_control/launch/: observer_tracking.launch
code_demo_ws/install/share/two_link_arm_gazebo/: package.xml
code_demo_ws/install/share/two_link_arm_gazebo/cmake/: two_link_arm_gazeboConfig.cmake
code_demo_ws/install/share/two_link_arm_gazebo/config/: two_link_controllers.yaml
code_demo_ws/install/share/two_link_arm_gazebo/launch/: gazebo.launch
code_demo_ws/install/share/two_link_arm_gazebo/rviz/: four_arms.rviz
code_demo_ws/install/share/two_link_arm_gazebo/urdf/: two_link_arm.xacro
