<?xml version="1.0"?>
<package format="2">
  <name>two_link_arm_gazebo</name>
  <version>0.0.1</version>
  <description>Two-link planar robot arm Gazebo simulation with effort control.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>effort_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

</package>